[API] update checkRole middlewear by user_id
